--- a/style.css
+++ b/style.css
@@ -147,7 +147,7 @@ header .navbar ul li a:active::before{
 
 .home{
 	min-height: 100vh;
-	background-image: url("Images/1.jpg");
+	background-image: url("images/1.jpg");
 	background-size: cover;
 	background-position: center;
 	padding: 15px;
